--- a/index.html
+++ b/index.html
@@ -524,15 +524,15 @@
       </div>
     </section>
 
-    <!-- institutino reviews -->
+    <!-- institution reviews -->
     <section class="pt-20">
       <div class="container">
         <h2 class="mb-16">what others are saying:</h2>
 
-        <div class="owl-carousel">
-          <!-- review box -->
+        <div class="instit-reviews owl-carousel">
+          <!-- review box 1-->
           <div
-            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-4 h-full"
+            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-8 h-full"
           >
             <!-- logo holder -->
             <div class="w-1/2 mx-auto">
@@ -550,9 +550,9 @@
               </p>
             </div>
           </div>
-          <!-- review box -->
+          <!-- review box 2-->
           <div
-            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-4 h-full"
+            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-8 h-full"
           >
             <!-- logo holder -->
             <div class="mx-auto">
@@ -578,52 +578,310 @@
               </p>
             </div>
           </div>
-          <!-- review box -->
+
+          <!-- review box 3-->
           <div
-            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-4 h-full"
+            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-8 h-full"
           >
             <!-- logo holder -->
-            <div class="w-1/2 mx-auto">
-              <img src="public/images/harvard-review.svg" alt="harvard logo" />
+            <div class="mx-auto">
+              <img
+                src="public/images/NY-times-reivew.svg"
+                alt="new your times logo"
+              />
             </div>
             <!-- text -->
             <div>
               <p class="text-white text-2xl font-semibold">
                 Studies show that by using
-                <span class="text-yellow-color">spaced repetition</span>, we can
-                <span class="text-yellow-color"
+                <span class="text-dark-orange-color"> spaced repetition </span>,
+                we can
+                <span class="text-dark-orange-color"
                   >remember about 80% of what we learn after 60 days</span
                 >
                 — a significant improvement.
               </p>
             </div>
           </div>
-          <!-- review box -->
+
+          <!-- review box 4-->
           <div
-            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-4 h-full"
+            class="flex flex-col items-center gap-16 bg-dark-grey-color rounded-lg pt-16 pb-36 px-8 h-full"
           >
             <!-- logo holder -->
             <div class="mx-auto">
               <img
-                src="public/images/american-bar-review.svg"
-                alt="harvard logo"
+                src="public/images/new-england-review.svg"
+                alt="new englaned logo"
               />
             </div>
             <!-- text -->
             <div>
               <p class="text-white text-2xl font-semibold">
-                <span class="text-yellow-color">Spaced repetition</span> allows
-                students to memorize
-                <span class="text-yellow-color">more than ever before</span> —
-                and to do
-                <span class="text-yellow-color">so in less time</span> than it
+                <span class="text-dark-orange-color">Spaced repetition</span>
+                allows students to memorize
+                <span class="text-dark-orange-color"
+                  >more than ever before</span
+                >
+                — and to do so in
+                <span class="text-dark-orange-color">less time</span> than it
                 takes to cram as most currently do. Using it
-                <span class="text-yellow-color">improves exam performance</span>
-                , makes class less stressful, and helps
-                <span class="text-yellow-color"
-                  >improve school-life balance.</span
+                <span class="text-dark-orange-color"
+                  >improves exam performance</span
+                >, makes class less stressful, and helps
+                <span class="text-dark-orange-color"
+                  >improve school-life balance</span
                 >
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- why we are better -->
+    <section
+      class="pt-14 pb-12 bg-[url('../images/we-are-better-bg.png')] bg-cover bg-center"
+    >
+      <div class="container">
+        <h2 class="text-white mb-12 xl:mb-7">why we are better for...</h2>
+        <!-- grid container -->
+        <div
+          class="grid lg:grid-cols-2 xl:grid-cols-4 justify-items-center w-11/12 mx-auto lg:gap-x-11 xl:gap-x-9 gap-y-20"
+        >
+          <!-- box 1 -->
+          <div
+            class="text-navy-color grid grid-rows-[auto_1fr] gap-5 justify-items-center"
+          >
+            <!-- img holder -->
+            <div class="w-3/4 h-fit">
+              <img
+                src="public/images/better-bot-resize-1.png"
+                alt="ai bot waving"
+                class="translate-x-1/4 mx-auto"
+              />
+            </div>
+            <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
+              <h3 class="text-3xl mb-6">law students</h3>
+              <p class="font-semibold">
+                Boost will get you up to speed and ahead of your classmates by
+                focusing your time on the most core, fundamental concepts taught
+                and tested.
+              </p>
+            </div>
+          </div>
+
+          <!-- box 2 -->
+          <div
+            class="text-navy-color grid grid-rows-[auto_1fr] gap-5 justify-items-center"
+          >
+            <!-- img holder -->
+            <div class="w-3/4 h-fit">
+              <img
+                src="public/images/better-bot-resize-2.png"
+                alt="ai bot waving"
+                class="mx-auto"
+              />
+            </div>
+            <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
+              <h3 class="text-3xl mb-6">bar preppers</h3>
+              <p class="font-semibold">
+                According to the ABA, spaced repetition allows law students to
+                memorize more, in less time, while improving exam performance
+                and lowering stress.
+              </p>
+            </div>
+          </div>
+
+          <!-- box 3 -->
+          <div
+            class="text-navy-color grid grid-rows-[auto_1fr] gap-5 justify-items-center"
+          >
+            <!-- img holder -->
+            <div class="w-3/4 h-fit">
+              <img
+                src="public/images/better-bot-3.png"
+                alt="ai bot waving"
+                class="mx-auto"
+              />
+            </div>
+            <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
+              <h3 class="text-3xl mb-6">neurodivergent</h3>
+              <p class="font-semibold">
+                Boost was made with non-traditional learning styles in mind. Our
+                founder is one of the only dyslexic & ADHD law professors at a
+                T20 law school.
+              </p>
+            </div>
+          </div>
+
+          <!-- box 4 -->
+          <div
+            class="text-navy-color grid grid-rows-[auto_1fr] gap-5 justify-items-center"
+          >
+            <!-- img holder -->
+            <div class="w-3/4 h-fit">
+              <img
+                src="public/images/better-bot-resize-4.png"
+                alt="ai bot waving"
+                class="mx-auto"
+              />
+            </div>
+            <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
+              <h3 class="text-3xl mb-6">eLL students</h3>
+              <p class="font-semibold">
+                Boost translates complex, technical legal terms and jargon into
+                simplified English concepts that are easy to understand,
+                especially for English Language Learners.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- reviews -->
+    <section class="pt-11 pb-14 bg-light-purple">
+      <div class="container">
+        <h2 class="text-white mb-12">what our students are saying</h2>
+        <div class="reviews owl-carousel">
+          <!-- box 1 -->
+          <div class="grid grid-rows-[4fr_1fr]">
+            <div
+              class="bg-white flex items-center px-4 rounded-3xl shadow-[8px_12px_0_0_#6c87b3] mb-6"
+            >
+              <p>
+                I have checked out everything on the market, and your approach
+                is better than all of them. In fact, there is nothing like your
+                app out there. I truly believe you have a diamond there!!
+              </p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img
+                src="public/images/alyssa.png"
+                alt="user avatar"
+                class="w-16"
+              />
+              <p class="capitalize">alyssa p.</p>
+            </div>
+          </div>
+
+          <!-- box 2 -->
+          <div class="grid grid-rows-[4fr_1fr]">
+            <div
+              class="bg-white flex items-center px-4 rounded-3xl shadow-[8px_12px_0_0_#6c87b3] mb-6"
+            >
+              <p>
+                I am sitting for the February bar and this app has been very
+                helpful. The questions make sure that you understand the
+                concepts. If you don't get it in words; the visuals make sure
+                you do. I wish I would have known about this while in law
+                school.
+              </p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img
+                src="public/images/brian.png"
+                alt="user avatar"
+                class="w-16"
+              />
+              <p class="capitalize">brian d.</p>
+            </div>
+          </div>
+
+          <!-- box 3-->
+          <div class="grid grid-rows-[4fr_1fr]">
+            <div
+              class="bg-white flex items-center px-4 rounded-3xl shadow-[8px_12px_0_0_#6c87b3] mb-6"
+            >
+              <p>
+                The illustrations make things so easy to remember and the
+                plain-language explanations make these concepts much more
+                accessible than the commercial bar prep programs I used!
+              </p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img src="public/images/yi.png" alt="user avatar" class="w-16" />
+              <p class="capitalize">yi q.</p>
+            </div>
+          </div>
+          <!-- box 3-->
+          <div class="grid grid-rows-[4fr_1fr]">
+            <div
+              class="bg-white flex items-center px-4 rounded-3xl shadow-[8px_12px_0_0_#6c87b3] mb-6"
+            >
+              <p>
+                The illustrations make things so easy to remember and the
+                plain-language explanations make these concepts much more
+                accessible than the commercial bar prep programs I used!
+              </p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img src="public/images/yi.png" alt="user avatar" class="w-16" />
+              <p class="capitalize">yi q.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="reviews-2 owl-carousel">
+          <!-- box 1 -->
+          <div class="grid grid-rows-[4fr_1fr]">
+            <div
+              class="bg-white flex items-center px-4 rounded-3xl shadow-[8px_12px_0_0_#6c87b3] mb-6"
+            >
+              <p>
+                I have checked out everything on the market, and your approach
+                is better than all of them. In fact, there is nothing like your
+                app out there. I truly believe you have a diamond there!!
+              </p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img
+                src="public/images/alyssa.png"
+                alt="user avatar"
+                class="w-16"
+              />
+              <p class="capitalize">alyssa p.</p>
+            </div>
+          </div>
+
+          <!-- box 2 -->
+          <div class="grid grid-rows-[4fr_1fr]">
+            <div
+              class="bg-white flex items-center px-4 rounded-3xl shadow-[8px_12px_0_0_#6c87b3] mb-6"
+            >
+              <p>
+                I am sitting for the February bar and this app has been very
+                helpful. The questions make sure that you understand the
+                concepts. If you don't get it in words; the visuals make sure
+                you do. I wish I would have known about this while in law
+                school.
+              </p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img
+                src="public/images/brian.png"
+                alt="user avatar"
+                class="w-16"
+              />
+              <p class="capitalize">brian d.</p>
+            </div>
+          </div>
+
+          <!-- box 3-->
+          <div class="grid grid-rows-[4fr_1fr]">
+            <div
+              class="bg-white flex items-center px-4 rounded-3xl shadow-[8px_12px_0_0_#6c87b3] mb-6"
+            >
+              <p>
+                The illustrations make things so easy to remember and the
+                plain-language explanations make these concepts much more
+                accessible than the commercial bar prep programs I used!
+              </p>
+            </div>
+            <div class="flex items-center gap-2">
+              <img src="public/images/yi.png" alt="user avatar" class="w-16" />
+              <p class="capitalize">yi q.</p>
             </div>
           </div>
         </div>
