--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,13 +37,13 @@
             <img src="public/images/logo.png" alt="logo" />
           </div>
           <ul
-            class="nav-menu flex flex-col lg:flex-row items-center gap-20 lg:gap-6 xl:gap-10 absolute lg:relative w-full lg:w-auto h-screen lg:h-auto inset-0 bg-navy-color lg:bg-transparent -z-10 lg:z-0 pt-32 lg:pt-0 justify-center -translate-y-full lg:translate-y-0 duration-700 ease-out opacity-0 lg:opacity-100"
+            class="nav-menu flex flex-col lg:flex-row items-center justify-between lg:gap-6 xl:gap-10 absolute lg:relative w-full lg:w-auto h-screen lg:h-auto inset-0 bg-navy-color lg:bg-transparent -z-10 lg:z-0 pt-32 pb-20 lg:pb-0 lg:pt-0 -translate-y-full lg:translate-y-0 duration-700 ease-out opacity-0 lg:opacity-100"
           >
-            <li><a href="#">why you'll love us</a></li>
-            <li><a href="#">features</a></li>
-            <li><a href="#">the science</a></li>
-            <li><a href="#">why we're better</a></li>
-            <li><a href="#">testimonials</a></li>
+            <li><a href="#why-us">why you'll love us</a></li>
+            <li><a href="#features">features</a></li>
+            <li><a href="#science">the science</a></li>
+            <li><a href="#we-better">why we're better</a></li>
+            <li><a href="#testimonials">testimonials</a></li>
           </ul>
           <!-- mobile menu button -->
           <img
@@ -56,7 +56,7 @@
     </header>
     <!-- hero -->
     <section
-      class="bg-[url('../images/hero-banner-cropped.png')] bg-cover bg-center pt-44 pb-48 lg:pb-28 xl:pb-44 mb-0 lg:-mb-[29px] xl:-mb-11 relative"
+      class="bg-[url('../images/hero-banner.svg')] bg-cover bg-center pt-44 pb-48 lg:pb-28 xl:pb-44 mb-0 lg:-mb-[29px] xl:-mb-11 relative overflow-hidden"
     >
       <div class="container">
         <div class="lg:grid grid-cols-[2fr_1fr]">
@@ -118,7 +118,7 @@
       <div class="container">
         <!-- flex container -->
         <div
-          class="grid grid-cols-reponsive-6 w-[90%] bg-navy-color rounded-2xl mx-auto py-7 px-14 gap-y-20"
+          class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6 w-[90%] bg-navy-color rounded-2xl mx-auto pt-20 pb-7 sm:py-7 px-14 gap-y-20"
         >
           <!-- box 1-->
           <div class="flex flex-col justify-between basis-40">
@@ -127,7 +127,7 @@
               <img
                 src="public/images/stats-students.svg"
                 alt="law students statistics icon"
-                class="mx-auto w-1/2"
+                class="mx-auto w-1/3 sm:w-1/2"
               />
             </div>
             <!-- heading & text -->
@@ -146,7 +146,7 @@
               <img
                 src="public/images/stats-law-schools.svg"
                 alt="law schools statistics icon"
-                class="mx-auto w-1/2"
+                class="mx-auto w-1/3 sm:w-1/2"
               />
             </div>
             <!-- heading & text -->
@@ -165,7 +165,7 @@
               <img
                 src="public/images/stats-core-topics.svg"
                 alt="core topics statistics icon"
-                class="mx-auto w-1/2"
+                class="mx-auto w-1/3 sm:w-1/2"
               />
             </div>
             <!-- heading & text -->
@@ -184,7 +184,7 @@
               <img
                 src="public/images/stats-simplified-rules.svg"
                 alt="simplified rules statistics icon"
-                class="mx-auto w-1/2"
+                class="mx-auto w-1/3 sm:w-1/2"
               />
             </div>
             <!-- heading & text -->
@@ -203,7 +203,7 @@
               <img
                 src="public/images/stats-concise-hypos.svg"
                 alt="concise hypos statistics icon"
-                class="mx-auto w-1/2"
+                class="mx-auto w-1/3 sm:w-1/2"
               />
             </div>
             <!-- heading & text -->
@@ -222,7 +222,7 @@
               <img
                 src="public/images/stats-star-rating.svg"
                 alt="star rating statistics icon"
-                class="mx-auto w-1/2"
+                class="mx-auto w-1/3 sm:w-1/2"
               />
             </div>
             <!-- heading & text -->
@@ -238,7 +238,7 @@
     </section>
 
     <!-- why you'll love us -->
-    <section class="relative pt-16 overflow-hidden">
+    <section class="relative pt-16 overflow-hidden" id="why-us">
       <div class="container">
         <!-- first grid container -->
         <div class="xl:grid grid-cols-2 justify-items-center">
@@ -350,6 +350,7 @@
     <!-- features -->
     <section
       class="bg-yellow-color pt-12 pb-36 lg:pb-16 shadow-[0_-3px_90px_25px_rgba(0,0,0,0.61)]"
+      id="features"
     >
       <div class="container">
         <h2 class="mb-20 md:mb-12 text-center sm:text-start">
@@ -367,7 +368,7 @@
               <img
                 src="public/images/features-1.svg"
                 alt="mobile phone showing law school boost logo"
-                class="mx-auto"
+                class="mx-auto w-1/4 md:w-2/3 lg:w-auto"
               />
             </div>
             <!-- text container -->
@@ -390,7 +391,7 @@
               <img
                 src="public/images/features-2.svg"
                 alt="cartoonish rocket following several paths"
-                class="mx-auto"
+                class="mx-auto w-1/4 md:w-2/3 lg:w-auto"
               />
             </div>
             <!-- text container -->
@@ -413,7 +414,7 @@
               <img
                 src="public/images/features-3.svg"
                 alt="tangled wires entering a cone from one end and getting out organized from the other end"
-                class="mx-auto"
+                class="mx-auto w-1/4 md:w-2/3 lg:w-auto"
               />
             </div>
             <!-- text container -->
@@ -436,7 +437,7 @@
               <img
                 src="public/images/features-4.svg"
                 alt="a hammer and a painting brush crossed"
-                class="mx-auto"
+                class="mx-auto w-1/4 md:w-2/3 lg:w-auto"
               />
             </div>
             <!-- text container -->
@@ -466,12 +467,14 @@
           class="grid justify-items-center md:grid-cols-[1fr_8fr] gap-x-9 gap-y-7 items-center"
         >
           <!-- image container -->
-          <div>
+          <div class="w-1/4 md:w-auto">
             <img src="public/images/ai-robot.svg" alt="cartoon ai robot" />
           </div>
           <!-- text container -->
           <div class="text-center md:text-start">
-            <h2 class="text-white text-3xl mb-1">A.I.-Enhanced study engine</h2>
+            <h2 class="text-white text-2xl sm:text-3xl mb-1">
+              A.I.-Enhanced study engine
+            </h2>
             <p>
               Our A.I. uses proven cognitive science and spaced repetition to
               ✨automagically✨ adapt your study plan in real-time, enabling 80%
@@ -484,14 +487,14 @@
       <img
         src="public/images/ai-arrow.png"
         alt="decorative arrow"
-        class="absolute -z-10 bottom-11 translate-y-full left-3 -translate-x-full"
+        class="absolute -z-10 bottom-5 sm:bottom-11 translate-y-full left-3 -translate-x-full w-[14%] sm:w-auto"
       />
     </section>
 
     <!-- it's science -->
-    <section class="pt-12">
+    <section class="pt-12" id="science">
       <div class="container">
-        <h2 class="mb-14 text-center lg:text-start">
+        <h2 class="mb-14 text-3xl sm:text-5xl text-center lg:text-start">
           don't take our Word for it — it's science!
         </h2>
         <!-- graph with text -->
@@ -527,7 +530,7 @@
     <!-- institution reviews -->
     <section class="pt-20">
       <div class="container">
-        <h2 class="mb-16">what others are saying:</h2>
+        <h2 class="mb-16 text-3xl sm:tex-5xl">what others are saying:</h2>
 
         <div class="instit-reviews owl-carousel">
           <!-- review box 1-->
@@ -642,9 +645,12 @@
     <!-- why we are better -->
     <section
       class="pt-14 pb-12 bg-[url('../images/we-are-better-bg.svg')] bg-cover bg-center"
+      id="we-better"
     >
       <div class="container">
-        <h2 class="text-white mb-12 xl:mb-7">why we are better for...</h2>
+        <h2 class="text-white mb-12 xl:mb-7 text-3xl sm:text-5xl">
+          why we are better for...
+        </h2>
         <!-- grid container -->
         <div
           class="grid lg:grid-cols-2 xl:grid-cols-4 justify-items-center w-11/12 mx-auto lg:gap-x-11 xl:gap-x-9 gap-y-20"
@@ -741,9 +747,11 @@
     </section>
 
     <!-- reviews -->
-    <section class="pt-11 pb-14 bg-light-purple">
+    <section class="pt-11 pb-14 bg-light-purple" id="testimonials">
       <div class="container">
-        <h2 class="text-white mb-12">what our students are saying</h2>
+        <h2 class="text-white mb-12 text-3xl sm:text-5xl">
+          what our students are saying
+        </h2>
         <div class="reviews owl-carousel">
           <!-- box 1 -->
           <div class="grid grid-rows-[4fr_1fr]">
@@ -930,7 +938,7 @@
     <!-- faq -->
     <section class="pt-16">
       <div class="container">
-        <h2 class="mb-14 text-center sm:text-start">
+        <h2 class="mb-14 text-center sm:text-start text-3xl sm:text-5xl">
           frequently asked question
         </h2>
         <div class="faq-container flex flex-col gap-10">
@@ -938,7 +946,7 @@
           <div class="faq-box w-11/12 mx-auto font-semibold">
             <!-- question box -->
             <div
-              class="question-box bg-light-blue text-3xl rounded-3xl cursor-pointer py-7 px-10 text-white"
+              class="question-box bg-light-blue text-lg sm:text-3xl rounded-3xl cursor-pointer py-7 px-10 text-white"
             >
               <p>
                 I already use another law school supplement or bar prep program,
@@ -947,7 +955,7 @@
             </div>
             <!-- answer box -->
             <div
-              class="answer-box pointer-events-none bg-light-purple text-2xl text-navy-color w-11/12 mx-auto duration-300 opacity-0 h-0 origin-top"
+              class="answer-box pointer-events-none bg-light-purple sm:text-2xl text-navy-color w-11/12 mx-auto duration-300 opacity-0 h-0 origin-top"
             >
               <p class="py-5 px-8">
                 Absolutely! We play nicely with others. Not only is Law School
@@ -962,13 +970,13 @@
           <div class="faq-box w-11/12 mx-auto font-semibold">
             <!-- question box -->
             <div
-              class="question-box bg-light-blue text-3xl rounded-3xl cursor-pointer py-7 px-10 text-white"
+              class="question-box bg-light-blue text-lg sm:text-3xl rounded-3xl cursor-pointer py-7 px-10 text-white"
             >
               <p>How much is Law School Boost?</p>
             </div>
             <!-- answer box -->
             <div
-              class="answer-box pointer-events-none bg-light-purple text-2xl text-navy-color w-11/12 mx-auto duration-300 opacity-0 h-0 origin-top"
+              class="answer-box pointer-events-none bg-light-purple sm:text-2xl text-navy-color w-11/12 mx-auto duration-300 opacity-0 h-0 origin-top"
             >
               <p class="py-5 px-8">
                 Absolutely! We play nicely with others. Not only is Law School
@@ -983,13 +991,13 @@
           <div class="faq-box w-11/12 mx-auto font-semibold">
             <!-- question box -->
             <div
-              class="question-box bg-light-blue text-3xl rounded-3xl cursor-pointer py-7 px-10 text-white"
+              class="question-box bg-light-blue text-lg sm:text-3xl rounded-3xl cursor-pointer py-7 px-10 text-white"
             >
               <p>Is Law School Boost for law school or bar prep?</p>
             </div>
             <!-- answer box -->
             <div
-              class="answer-box pointer-events-none bg-light-purple text-2xl text-navy-color w-11/12 mx-auto duration-300 opacity-0 h-0 origin-top"
+              class="answer-box pointer-events-none bg-light-purple sm:text-2xl text-navy-color w-11/12 mx-auto duration-300 opacity-0 h-0 origin-top"
             >
               <p class="py-5 px-8">
                 Absolutely! We play nicely with others. Not only is Law School
@@ -1004,13 +1012,13 @@
           <div class="faq-box w-11/12 mx-auto font-semibold">
             <!-- question box -->
             <div
-              class="question-box bg-light-blue text-3xl rounded-3xl cursor-pointer py-7 px-10 text-white"
+              class="question-box bg-light-blue text-lg sm:text-3xl rounded-3xl cursor-pointer py-7 px-10 text-white"
             >
               <p>Are you hiring?</p>
             </div>
             <!-- answer box -->
             <div
-              class="answer-box pointer-events-none bg-light-purple text-2xl text-navy-color w-11/12 mx-auto duration-300 opacity-0 h-0 origin-top"
+              class="answer-box pointer-events-none bg-light-purple sm:text-2xl text-navy-color w-11/12 mx-auto duration-300 opacity-0 h-0 origin-top"
             >
               <p class="py-5 px-8">
                 Absolutely! We play nicely with others. Not only is Law School
@@ -1070,6 +1078,110 @@
     </section>
 
     <!-- footer -->
+    <footer
+      class="relative bg-[url('../images/footer-bg.svg')] bg-cover bg-top p-10 pb-5 text-white text-2xl capitalize"
+    >
+      <div class="container">
+        <!-- grid container -->
+        <div
+          class="grid xl:grid-cols-[1fr_4fr_1fr] gap-x-10 gap-y-24 justify-items-center"
+        >
+          <!-- logo holder -->
+          <div class="pt-8">
+            <img src="public/images/logo.png" alt="" />
+          </div>
+
+          <!-- menu holder -->
+          <div
+            class="grid sm:grid-cols-3 gap-x-8 lg:gap-x-16 gap-y-20 text-center sm:text-start"
+          >
+            <div>
+              <h2 class="text-yellow-color text-4xl mb-8">company</h2>
+              <ul class="flex flex-col gap-3">
+                <li>
+                  <a href="#">blog</a>
+                </li>
+                <li>
+                  <a href="#">become a rep</a>
+                </li>
+                <li>
+                  <a href="#">law school login</a>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <h2 class="text-yellow-color text-4xl mb-8">policies</h2>
+              <ul class="flex flex-col gap-3">
+                <li>
+                  <a href="#">terms of use</a>
+                </li>
+                <li>
+                  <a href="#">privacy policy</a>
+                </li>
+                <li>
+                  <a href="#">CCPA request</a>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <h2 class="text-yellow-color text-4xl mb-8">contact</h2>
+              <ul class="flex flex-col gap-3">
+                <li>
+                  <a href="#">contact us</a>
+                </li>
+                <li>
+                  <a href="#">support</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- social media holder -->
+          <div>
+            <ul class="flex justify-center gap-5">
+              <li>
+                <a href="#">
+                  <img
+                    src="public/images/icon-facebook.svg"
+                    alt=""
+                    class="w-3/4 sm:w-auto"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="public/images/icon-tiktok.svg"
+                    alt=""
+                    class="w-3/4 sm:w-auto"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="public/images/icon-instagram.svg"
+                    alt=""
+                    class="w-3/4 sm:w-auto"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- copyright text -->
+      <div class="text-center text-lg mt-20">
+        &copy; 2023 - Law School Boost, LLC. All Rights Reserved.
+      </div>
+      <img
+        src="public/images/footer-missle.svg"
+        alt="decorative rocket logo"
+        class="absolute right-0 top-1 -translate-x-1/2 -translate-y-full w-1/5 sm:w-[15%] xl:w-[9%]"
+      />
+    </footer>
   </body>
 
   <!-- jquery -->
