--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
     <!-- hero -->
     <section
-      class="bg-[url('../images/hero-banner.svg')] bg-cover bg-center pt-44 pb-48 lg:pb-28 xl:pb-44 mb-0 lg:-mb-[29px] xl:-mb-11 relative overflow-hidden"
+      class="bg-[url('../images/hero-banner.svg')] bg-cover bg-center pt-44 pb-48 lg:pb-72 2xl:pb-64 mb-0 lg:-mb-[29px] xl:-mb-11 relative overflow-hidden"
     >
       <div class="container">
         <div class="lg:grid grid-cols-[2fr_1fr]">
@@ -77,7 +77,7 @@
             </p>
             <!-- download app buttons container -->
             <div
-              class="flex gap-5 relative lg:left-20 w-fit mx-auto lg:mx-0 xl:w-auto"
+              class="flex flex-col sm:flex-row gap-5 relative lg:left-20 w-fit mx-auto lg:mx-0 xl:w-auto"
             >
               <a href="#" class="inline-block w-36 xl:w-auto">
                 <img
@@ -92,12 +92,6 @@
                   alt="play store download"
                 />
               </a>
-              <!-- middle missle -->
-              <img
-                src="public/images/hero-missle.png"
-                alt="decorative missle"
-                class="absolute lg:right-0 lg:translate-x-3/4 xl:translate-x-10 lg:translate-y-[32%] bottom-0 -right-1/2 -translate-x-1/2 translate-y-3/4"
-              />
             </div>
           </div>
 
@@ -115,6 +109,12 @@
 
     <!-- statistics -->
     <section class="relative">
+      <!-- middle missle -->
+      <img
+        src="public/images/hero-missle.png"
+        alt="decorative missle"
+        class="absolute top-0 -translate-y-full left-1/2 -translate-x-1/2 w-60 sm:w-2/5 md:w-1/3 pointer-events-none"
+      />
       <div class="container">
         <!-- flex container -->
         <div
