--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     >
       <nav>
         <div class="container flex justify-between sm:w-11/12 lg:w-full">
-          <div class="logo w-40 xl:w-auto">
+          <div class="logo w-1/4 sm:w-40 xl:w-auto">
             <img src="public/images/logo.png" alt="logo" />
           </div>
           <ul
@@ -63,7 +63,7 @@
           <!-- text container -->
           <div class="text-white text-center lg:text-start lg:pl-24">
             <h1
-              class="capitalize font-heading-font font-bold text-5xl xl:text-7xl mb-4"
+              class="capitalize font-heading-font font-bold text-4xl sm:text-5xl xl:text-7xl mb-4"
             >
               study faster <br />
               <span class="text-yellow-color">remember long</span>
@@ -113,7 +113,7 @@
       <img
         src="public/images/hero-missle.png"
         alt="decorative missle"
-        class="absolute top-0 -translate-y-full left-1/2 -translate-x-1/2 w-60 sm:w-2/5 md:w-1/3 pointer-events-none"
+        class="absolute top-0 -translate-y-full left-1/2 -translate-x-1/2 w-60 sm:w-2/5 md:w-1/3 pointer-events-none max-w-lg"
       />
       <div class="container">
         <!-- flex container -->
@@ -1079,7 +1079,7 @@
 
     <!-- footer -->
     <footer
-      class="relative bg-[url('../images/footer-bg.svg')] bg-cover bg-top p-10 pb-5 text-white text-2xl capitalize"
+      class="relative bg-[url('../images/footer-bg.svg')] bg-cover bg-top p-10 pb-5 text-white sm:text-2xl capitalize"
     >
       <div class="container">
         <!-- grid container -->
@@ -1088,7 +1088,11 @@
         >
           <!-- logo holder -->
           <div class="pt-8">
-            <img src="public/images/logo.png" alt="" />
+            <img
+              src="public/images/logo.png"
+              alt=""
+              class="w-4/6 mx-auto sm:w-auto"
+            />
           </div>
 
           <!-- menu holder -->
@@ -1096,7 +1100,9 @@
             class="grid sm:grid-cols-3 gap-x-8 lg:gap-x-16 gap-y-20 text-center sm:text-start"
           >
             <div>
-              <h2 class="text-yellow-color text-4xl mb-8">company</h2>
+              <h2 class="text-yellow-color text-2xl sm:text-4xl mb-8">
+                company
+              </h2>
               <ul class="flex flex-col gap-3">
                 <li>
                   <a href="#">blog</a>
@@ -1111,7 +1117,9 @@
             </div>
 
             <div>
-              <h2 class="text-yellow-color text-4xl mb-8">policies</h2>
+              <h2 class="text-yellow-color text-2xl sm:text-4xl mb-8">
+                policies
+              </h2>
               <ul class="flex flex-col gap-3">
                 <li>
                   <a href="#">terms of use</a>
@@ -1126,7 +1134,9 @@
             </div>
 
             <div>
-              <h2 class="text-yellow-color text-4xl mb-8">contact</h2>
+              <h2 class="text-yellow-color text-2xl sm:text-4xl mb-8">
+                contact
+              </h2>
               <ul class="flex flex-col gap-3">
                 <li>
                   <a href="#">contact us</a>
@@ -1173,7 +1183,7 @@
         </div>
       </div>
       <!-- copyright text -->
-      <div class="text-center text-lg mt-20">
+      <div class="text-center sm:text-lg mt-20">
         &copy; 2023 - Law School Boost, LLC. All Rights Reserved.
       </div>
       <img
