--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <img
         src="public/images/hero-missle.png"
         alt="decorative missle"
-        class="absolute top-0 -translate-y-full left-1/2 -translate-x-1/2 w-60 sm:w-2/5 md:w-1/3 pointer-events-none max-w-lg"
+        class="absolute top-1 -translate-y-full left-1/2 -translate-x-1/2 w-60 sm:w-2/5 md:w-1/3 pointer-events-none max-w-lg"
       />
       <div class="container">
         <!-- flex container -->
@@ -243,9 +243,9 @@
         <!-- first grid container -->
         <div class="xl:grid grid-cols-2 justify-items-center">
           <!-- text container -->
-          <div class="flex flex-col items-center">
+          <div class="grid justify-items-center">
             <h2
-              class="capitalize text-center sm:text-start text-navy-color font-heading-font font-bold text-5xl mb-7"
+              class="capitalize text-center sm:text-start text-navy-color font-heading-font font-bold text-5xl mb-7 xl:justify-self-start"
             >
               why you'll love us
             </h2>
@@ -653,7 +653,7 @@
         </h2>
         <!-- grid container -->
         <div
-          class="grid lg:grid-cols-2 xl:grid-cols-4 justify-items-center w-11/12 mx-auto lg:gap-x-11 xl:gap-x-9 gap-y-20"
+          class="grid lg:grid-cols-2 xl:grid-cols-4 justify-items-center sm:w-11/12 mx-auto lg:gap-x-11 xl:gap-x-9 gap-y-20"
         >
           <!-- box 1 -->
           <div
@@ -668,7 +668,7 @@
               />
             </div>
             <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
-              <h3 class="text-3xl mb-6">law students</h3>
+              <h3 class="text-2xl sm:text-3xl mb-6">law students</h3>
               <p class="font-semibold">
                 Boost will get you up to speed and ahead of your classmates by
                 focusing your time on the most core, fundamental concepts taught
@@ -690,7 +690,7 @@
               />
             </div>
             <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
-              <h3 class="text-3xl mb-6">bar preppers</h3>
+              <h3 class="text-2xl sm:text-3xl mb-6">bar preppers</h3>
               <p class="font-semibold">
                 According to the ABA, spaced repetition allows law students to
                 memorize more, in less time, while improving exam performance
@@ -712,7 +712,7 @@
               />
             </div>
             <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
-              <h3 class="text-3xl mb-6">neurodivergent</h3>
+              <h3 class="text-2xl sm:text-3xl mb-6">neurodivergent</h3>
               <p class="font-semibold">
                 Boost was made with non-traditional learning styles in mind. Our
                 founder is one of the only dyslexic & ADHD law professors at a
@@ -734,7 +734,7 @@
               />
             </div>
             <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
-              <h3 class="text-3xl mb-6">eLL students</h3>
+              <h3 class="text-2xl sm:text-3xl mb-6">eLL students</h3>
               <p class="font-semibold">
                 Boost translates complex, technical legal terms and jargon into
                 simplified English concepts that are easy to understand,
