converted why-us phones from png to svg and handeled svg by figma

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </section>
 
     <!-- statistics -->
-    <section class="relative z-20">
+    <section class="count relative z-20" id="counter">
       <!-- middle missle -->
       <img
         src="public/images/hero-missle.png"
@@ -149,7 +149,7 @@
             <!-- heading & text -->
             <div class="text-center text-white capitalize text-xl">
               <span class="text-yellow-color block mb-3 text-3xl font-bold">
-                4,000+
+                <span class="counter">4000</span>+
               </span>
               law students
             </div>
@@ -168,7 +168,7 @@
             <!-- heading & text -->
             <div class="text-center text-white capitalize text-xl">
               <span class="text-yellow-color block mb-3 text-3xl font-bold">
-                200+
+                <span class="counter">200</span>+
               </span>
               law shools
             </div>
@@ -186,7 +186,9 @@
             </div>
             <!-- heading & text -->
             <div class="text-center text-white capitalize text-xl">
-              <span class="text-yellow-color block mb-3 text-3xl font-bold">
+              <span
+                class="text-yellow-color block mb-3 text-3xl font-bold counter"
+              >
                 15
               </span>
               core topics
@@ -206,7 +208,7 @@
             <!-- heading & text -->
             <div class="text-center text-white capitalize text-xl">
               <span class="text-yellow-color block mb-3 text-3xl font-bold">
-                1,600+
+                <span class="counter">1600</span>+
               </span>
               simplified rules
             </div>
@@ -225,7 +227,7 @@
             <!-- heading & text -->
             <div class="text-center text-white capitalize text-xl">
               <span class="text-yellow-color block mb-3 text-3xl font-bold">
-                4,000+
+                <span class="counter">4000</span>+
               </span>
               concise hypos
             </div>
@@ -243,7 +245,9 @@
             </div>
             <!-- heading & text -->
             <div class="text-center text-white capitalize text-xl">
-              <span class="text-yellow-color block mb-3 text-3xl font-bold">
+              <span
+                class="text-yellow-color block mb-3 text-3xl font-bold counter"
+              >
                 4.8
               </span>
               star rating
@@ -314,13 +318,13 @@
             class="relative self-end lg:self-center flex justify-end w-2/3 sm:w-auto"
           >
             <img
-              src="public/images/why-us-first-phone-cropped.png"
+              src="public/images/first-mobile.svg"
               alt="phone screen showing a progress bar of the application with a quiz beneath it"
               class="w-2/3 lg:w-auto"
             />
             <!-- hidden from lg and up -->
             <img
-              src="public/images/why-us-second-phone-cropped.png"
+              src="public/images/second-mobile.svg"
               alt="phone screen showing a dark theme of the application with colorful progress bars and pie charts of the completed courses"
               class="absolute top-0 right-0 -translate-x-1/2 w-2/3 lg:hidden"
             />
