added animation to the numbers and ai bot

--- a/index.html
+++ b/index.html
@@ -488,7 +488,11 @@
         >
           <!-- image container -->
           <div class="w-1/4 md:w-auto">
-            <img src="public/images/ai-robot.svg" alt="cartoon ai robot" />
+            <img
+              src="public/images/ai-robot.svg"
+              alt="cartoon ai robot"
+              class="animate-hover"
+            />
           </div>
           <!-- text container -->
           <div class="text-center md:text-start">
