animated why we are better section bots

--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
               <img
                 src="public/images/better-bot-resized-1.svg"
                 alt="ai bot waving"
-                class="mx-auto"
+                class="mx-auto animate-hover-better-bot-1"
               />
             </div>
             <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
@@ -710,7 +710,7 @@
               <img
                 src="public/images/better-bot-resized-2.svg"
                 alt="ai bot waving"
-                class="mx-auto"
+                class="mx-auto animate-hover-better-bot-2"
               />
             </div>
             <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
@@ -732,7 +732,7 @@
               <img
                 src="public/images/better-bot-resized-3.svg"
                 alt="ai bot waving"
-                class="mx-auto"
+                class="mx-auto animate-hover-better-bot-1"
               />
             </div>
             <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
@@ -754,7 +754,7 @@
               <img
                 src="public/images/better-bot-resized-4.svg"
                 alt="ai bot waving"
-                class="mx-auto"
+                class="mx-auto animate-hover-better-bot-2"
               />
             </div>
             <div class="bg-white rounded-3xl pt-6 pb-12 px-4">
